syntax = "proto3";

package appointment;
option go_package = "./domain/appointment";

import "google/protobuf/timestamp.proto";

// #region Appointment Message Proto

// default [Get]
message AppointmentProto {
    string healthcare_id = 1;
    string appointment_no = 2;
    string paramedic_id = 3;
    string patient_id = 4;
    google.protobuf.Timestamp appointment_date = 5;
    google.protobuf.Timestamp appointment_time = 6;
    bool is_void = 7;
    string user_create = 8;
    google.protobuf.Timestamp create_at = 9;
    int64 schedule_slot_id = 10;
}

// list
message AppointmentListProto {
    repeated AppointmentProto appointments = 1;
}

// get
message AppointmentGetProto {
    string healthcare_id = 1;
    string appointment_no = 2;
}

// add
message AppointmentAddProto {
    AppointmentProto addappointment = 1;
}

// update
message AppointmentUpdateProto {
    AppointmentProto updateappointment = 1;
}

// delete
message AppointmentDeleteProto {
    AppointmentProto deleteappointment = 1;
}

message AppointmentDeleteResponseProto {
    string healthcare_id = 1;
    string appointment_no = 2;
}

// #endregion end of Appointment Proto

// #region Services

service AppointmentService {
    rpc List(AppointmentProto) returns (AppointmentListProto) {}
    rpc Get(AppointmentGetProto) returns (AppointmentProto) {}    
    rpc Add(AppointmentAddProto) returns (AppointmentProto) {}    
    rpc Update(AppointmentUpdateProto) returns (AppointmentProto) {}    
    rpc Delete(AppointmentDeleteProto) returns (AppointmentDeleteResponseProto) {}    
}

// #endregion end of Services